--- a/main.html
+++ b/main.html
@@ -5,8 +5,15 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
-<body>
+<body style="background-color: yellow" value="yellow" style="text-align: center" value="center">
+	<div>
+	<h1 id="f1">Flowers photos</h1>
+	<p>Should show information about the floer</p>
+	</div>
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p>Should show information about the flower</p>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
